add repo link to notebook

--- a/geobook.ipynb
+++ b/geobook.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Geobook: an open Jupyter sandbox\n",
     "\n",
-    "If you're viewing this Notebook via **mybinder.org** then this is an ephemeral, private, individual-to-you instance of the Notebook. Any edits you make or new cells you create will vanish when you close your browser. Use this space to explore a Jupyter Notebook environment with demo data & pre-loaded libraries ready for you to play with. A [Folium](https://python-visualization.github.io/folium/index.html) map object is defined in case you'd like to create a slippy map here with Python.\n",
+    "If you're viewing this Notebook via **mybinder.org** then this is an ephemeral, private, individual-to-you instance of the Notebook. This mybinder instance is built on a public GitHub repo: [https://github.com/sarasafavi/geobook](https://github.com/sarasafavi/geobook). Pull requests welcome!\n",
+    "\n",
+    "Any edits you make or new cells you create will vanish when you close your browser. Use this space to explore a Jupyter Notebook environment with demo data & pre-loaded libraries ready for you to play with. A [Folium](https://python-visualization.github.io/folium/index.html) map object is defined in case you'd like to create a slippy map here with Python.\n",
     "\n",
     "Click the **+** button on the toolbar above to insert a new cell.\n",
     "\n",
